--- a/public/loading/styles/loading.css
+++ b/public/loading/styles/loading.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100%;
+    height: calc(var(--vh, 1vh) * 100);
     background-image: url('../img/flashscreen.png');
     background-repeat: no-repeat;
     background-size: auto 100%;
@@ -11,22 +11,6 @@
     background-color: black;
     z-index: 999999;
 }
-
-/* .loading-background {
-    --width: auto;
-    --height: auto;
-    --translate-x: -50%;
-    --translate-y: -50%;
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    width: var(--width);
-    height: var(--height);
-
-    transform: translateX(var(--translate-x)) translateY(var(--translate-y));
-} */
 
 .loading-hide {
     animation-name: fadeOut;
@@ -115,10 +99,6 @@
 }
 
 @media (orientation: landscape) {
-    /* .loading-background {
-        --width: 100%;
-    } */
-
     .loading-logo {
         width: clamp(30%, 220px, 50%);
     }
