--- a/src/common/components/Game/styles.module.scss
+++ b/src/common/components/Game/styles.module.scss
@@ -1,6 +1,6 @@
 .mobile-portrait,
 .mobile-landscape {
-    .game-area {
+    &.game-area {
         position: relative;
         width: 100%;
         height: 100%;
