--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,10 +1,3 @@
-:root {
-    --white: #fff;
-    --base: #0f101d;
-    --cyan: #00c3d8;
-    --gray: #85879d;
-}
-
 body {
     font-size: 1rem;
     color: var(--white);
@@ -18,6 +11,23 @@ html {
     height: -webkit-fill-available;
 }
 
+:not(.no-scrollbar)::-webkit-scrollbar {
+    width: 2px;
+    height: 2px;
+}
+
+:not(.no-scrollbar)::-webkit-scrollbar-track {
+    background: #2e2f4b;
+}
+
+:not(.no-scrollbar)::-webkit-scrollbar-thumb {
+    background: #41527e;
+}
+
+:not(.no-scrollbar)::-webkit-scrollbar-thumb:hover {
+    background: #ccc;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
     display: none;
@@ -29,21 +39,4 @@ html {
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
-}
-
-::-webkit-scrollbar {
-    width: 2px;
-    height: 2px;
-}
-
-::-webkit-scrollbar-track {
-    background: #2e2f4b;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #41527e;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #ccc;
 }
