--- a/public/styles/reset.css
+++ b/public/styles/reset.css
@@ -46,9 +46,16 @@ body {
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: inherit;
-    user-select: none;
     background-color: black;
     color: #fff;
+
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 /* Set shorter line heights on headings and interactive elements */
@@ -109,6 +116,7 @@ textarea:not([rows]) {
 /* Reset button */
 button {
     all: unset;
+    /* outline: revert; */
     cursor: pointer;
 }
 
