--- a/src/common/components/Button/styles.module.scss
+++ b/src/common/components/Button/styles.module.scss
@@ -1,27 +1,17 @@
 .button {
     --opacity: 1;
 
-    opacity: var(var(--opacity));
+    opacity: var(--opacity);
+
+    scale: 1;
+    transition: scale 0.5;
 
     &:active:not(:disabled) {
-        animation: click 0.2s linear;
+        scale: 0.75;
+        transition: scale 0.5;
     }
 
     &:disabled {
         --opacity: 0.5;
-    }
-}
-
-@keyframes click {
-    0% {
-        transform: scale(1);
-    }
-
-    50% {
-        transform: scale(0.85);
-    }
-
-    100% {
-        transform: scale(1);
     }
 }
