--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -29,4 +29,6 @@
         linear-gradient(180deg, rgba(28, 19, 3, 0) 0%, rgba(28, 19, 3, 0.83) 47.34%, #0d0800 100%);
 
     --bg-footer: transparent; // rgba(2, 10, 20, 0.5);
+
+    --size-button: 3.4rem;
 }
