--- a/src/common/layouts/v1/PanelTop/styles.module.scss
+++ b/src/common/layouts/v1/PanelTop/styles.module.scss
@@ -1,6 +1,6 @@
-.panel-left {
+.panel-top {
     height: 100%;
-    width: 100%;
+    padding: 0 0.8rem;
 
     display: flex;
     flex-direction: column;
