--- a/src/common/components/ButtonAction/styles.module.scss
+++ b/src/common/components/ButtonAction/styles.module.scss
@@ -30,10 +30,10 @@
     align-items: center;
 
     border-radius: 0.8rem;
-    border: 0.1rem solid rgba(133, 135, 157, 0.32);
+    border: 0.1rem solid rgba(255, 255, 255, 0.24);
     background-color: rgba(0, 0, 0, 0.32);
-    backdrop-filter: blur(0.2px);
     transition: all 0.2s linear;
+    backdrop-filter: blur(0.35rem);
 
     &.circle {
         border-radius: 100%;
