--- a/src/common/layouts/v1/styles.module.scss
+++ b/src/common/layouts/v1/styles.module.scss
@@ -31,6 +31,13 @@
     padding-bottom: 1.2rem;
 }
 
+.top {
+    position: absolute;
+    top: 0;
+    height: calc(var(--height-streaming) * 1px);
+    padding-bottom: 1.5rem;
+}
+
 .mobile-portrait {
     &.layout {
         &.offset-streaming {
