--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -31,4 +31,14 @@
     --bg-footer: transparent; // rgba(2, 10, 20, 0.5);
 
     --size-button: 3.4rem;
+
+    --timer-portrait-top: calc(var(--height-streaming) * 1px);
+    --timer-portrait-left: 50%;
+    --timer-portrait-trans-x: -50%;
+    --timer-portrait-trans-y: calc(-5.2rem - 1rem);
+
+    --timer-landscape-top: 2rem;
+    --timer-landscape-left: 1.2rem;
+    --timer-landscape-trans-x: 0;
+    --timer-landscape-trans-y: 0;
 }
