payput and limit

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -2,7 +2,7 @@
     --white: #fff;
     --base: #0f101d;
     --cyan: #00c3d8;
-    --gray: #85879d;
+    --gray: #c8c9db;
 
     // portrait, streaming ke bawah
     --streaming-color-1: linear-gradient(180deg, #854c07 0%, #533909 40.22%, #0e0901 100%);
