update table bet

--- a/src/game/components/MainArea/styles.module.scss
+++ b/src/game/components/MainArea/styles.module.scss
@@ -36,13 +36,14 @@
         gap: 2rem;
     }
 
+    .panel-history,
     .panel-bet {
         padding: 0 5.7rem 0;
     }
 }
 
 .panel-history {
-    height: 2rem;
+    height: 3rem;
 }
 
 .panel-bet {
