--- a/src/game/components/TableBet/ButtonBet/BetColRow/styles.module.scss
+++ b/src/game/components/TableBet/ButtonBet/BetColRow/styles.module.scss
@@ -6,12 +6,10 @@
     gap: 0.4rem;
 }
 
-.button {
+.button-name {
     font-size: 1.2rem;
     font-weight: 800;
     color: #583e11;
-    line-height: normal;
-
     text-align: center;
 }
 
