--- a/src/common/components/ChipDeck/styles.module.scss
+++ b/src/common/components/ChipDeck/styles.module.scss
@@ -8,136 +8,8 @@
     }
 }
 
-.mobile-portrait {
-    &.v1 {
-        &.chip-deck {
-            // background-color: red;
-            --gap: 0.6rem;
-            --offset: 0.6rem;
-            --offset-height-active: 2rem;
-
-            position: relative;
-
-            .wrapper,
-            .wrapperActive {
-                display: flex;
-                align-items: center;
-                gap: var(--gap);
-                padding: 0 var(--offset);
-
-                border: 0.1rem solid rgba(255, 255, 255, 0.16);
-            }
-
-            .wrapper {
-                height: 3.4rem;
-
-                overflow: auto;
-
-                width: calc((2.8rem * 5) + (var(--gap) * 4) + (var(--offset) * 2) + 0.1rem);
-
-                border-radius: 3.4rem;
-                background: rgba(0, 0, 0, 0.32);
-                backdrop-filter: blur(0.6rem);
-            }
-
-            .overflow {
-                pointer-events: none;
-
-                overflow: auto;
-                position: absolute;
-                width: calc((2.8rem * 5) + (var(--gap) * 4) + (var(--offset) * 2) + 0.1rem);
-                overflow: hidden;
-                height: calc(3.4rem + (var(--offset-height-active) * 2));
-
-                // background-color: red;
-                // opacity: 0.5;
-
-                left: 0;
-                top: calc(var(--offset-height-active) * -1);
-                border-radius: 3.5rem;
-            }
-
-            .wrapperActive {
-                overflow: visible;
-                height: 3.4rem;
-
-                border-color: transparent;
-
-                position: absolute;
-                bottom: var(--offset-height-active);
-                left: 0;
-            }
-        }
-    }
-}
-
-.desktop,
-.mobile-landscape {
-    &.v1 {
-        &.chip-deck {
-            // background-color: red;
-            --gap: 0.6rem;
-            --offset: 0.6rem;
-            --offset-height-active: 2rem;
-
-            position: relative;
-
-            .wrapper,
-            .wrapperActive {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: var(--gap);
-                padding: var(--offset) 0;
-
-                border: 0.1rem solid rgba(255, 255, 255, 0.16);
-            }
-
-            .wrapper {
-                width: 3.4rem;
-
-                overflow: auto;
-
-                height: calc((2.8rem * 4) + (var(--gap) * 3) + (var(--offset) * 2) + 0.1rem);
-
-                border-radius: 3.4rem;
-                background: rgba(0, 0, 0, 0.32);
-                backdrop-filter: blur(0.6rem);
-            }
-
-            .overflow {
-                pointer-events: none;
-
-                overflow: auto;
-                position: absolute;
-                height: calc((2.8rem * 4) + (var(--gap) * 3) + (var(--offset) * 2) + 0.1rem);
-                overflow: hidden;
-                width: calc(3.4rem + (var(--offset-height-active) * 2));
-
-                // background-color: red;
-                // opacity: 0.5;
-
-                top: 0;
-                left: calc(var(--offset-height-active) * -1);
-                border-radius: 3.5rem;
-            }
-
-            .wrapperActive {
-                overflow: visible;
-                width: 3.4rem;
-
-                border-color: transparent;
-
-                // background-color: blue;
-                // opacity: 0.5;
-
-                position: absolute;
-                right: var(--offset-height-active);
-                top: 0;
-            }
-        }
-    }
-}
+@import './v1';
+@import './v2';
 
 @keyframes fadein {
     from {
