--- a/public/loading/styles/loading.css
+++ b/public/loading/styles/loading.css
@@ -65,6 +65,12 @@
     color: #fff;
 }
 
+@supports (height: 100dvh) {
+    .loading {
+        height: 100dvh;
+    }
+}
+
 @media (min-aspect-ratio: 45 / 83) {
     .loading {
         background-size: 100% auto;
