--- a/src/game/components/TableBet/ButtonBet/position.scss
+++ b/src/game/components/TableBet/ButtonBet/position.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 @mixin button-bet-position {
     .button-bet {
         @for $i from 1 through 24 {
@@ -12,7 +14,7 @@
                     grid-row: 5;
                 }
 
-                grid-column: #{(ceil($i / 4) - 1) * 5 + 6} / span 5;
+                grid-column: #{(ceil(math.div($i, 4)) - 1) * 5 + 6} / span 5;
             }
         }
 
