--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,7 +1,7 @@
 body {
     font-size: 1rem;
     color: var(--white);
-    min-height: -webkit-fill-available;
+    // min-height: -webkit-fill-available;
 
     padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
         env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
