--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -4,6 +4,9 @@
     --cyan: #00c3d8;
     --gray: #c8c9db;
 
+    // setting streaming scale in portrait
+    --streaming-scale-portrait: 1.1;
+
     // portrait, streaming ke bawah
     --streaming-color-1: linear-gradient(180deg, #854c07 0%, #533909 40.22%, #0e0901 100%);
     // portrait, blur di bawah streaming 1
