--- a/src/game/components/TableBet/TableBetChip/styles.module.scss
+++ b/src/game/components/TableBet/TableBetChip/styles.module.scss
@@ -34,9 +34,10 @@
 }
 
 .chip-text {
-    font-size: 0.3em;
+    font-size: 0.35em;
     font-weight: 700;
     letter-spacing: -0.0644rem;
+    white-space: nowrap;
     position: relative;
     z-index: 1;
 
@@ -54,6 +55,7 @@
         -webkit-text-fill-color: transparent;
         font-weight: 800;
         font-size: 1.1rem;
+        white-space: nowrap;
     }
 }
 
