--- a/src/common/components/Timer/TimerContent/styles.module.scss
+++ b/src/common/components/Timer/TimerContent/styles.module.scss
@@ -19,6 +19,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    white-space: nowrap;
 
     font-size: 2.4rem;
     font-weight: 700;
