--- a/src/game/components/TableBet/TableBetChip/styles.module.scss
+++ b/src/game/components/TableBet/TableBetChip/styles.module.scss
@@ -50,7 +50,7 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-weight: 800;
-        font-size: 1.1rem;
+        font-size: 0.35em;
         white-space: nowrap;
     }
 }
