--- a/src/common/components/ChipDeck/Chip/styles.module.scss
+++ b/src/common/components/ChipDeck/Chip/styles.module.scss
@@ -1,6 +1,7 @@
 .chip {
-    --width-chip: 2.8rem;
-    --height-chip: 2.8rem;
+    --width-chip: 2.2rem;
+    --height-chip: 2.2rem;
+    font-size: 2.4rem;
 
     position: relative;
     flex-shrink: 0;
@@ -9,16 +10,29 @@
     width: var(--width-chip);
     height: var(--height-chip);
 
+    transform: scale(1);
+    transition: transform 0.45s linear;
+
     &.active {
-        opacity: 0;
-    }
+        transform: scale(1.2);
+        transition: transform 0.45s linear;
 
-    &.selected-chip {
-        opacity: 0;
-    }
+        &::before {
+            content: '';
+            position: absolute;
+            z-index: -1;
+            width: calc(100% + 0.5rem);
+            height: calc(100% + 0.5rem);
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(0, 195, 216, 0.5);
 
-    &.unselected-chip {
-        opacity: 1;
+            border: 0.15rem solid #00c3d8;
+            filter: drop-shadow(0px 0px 0.2rem rgba(0, 195, 216, 0.75));
+            backdrop-filter: blur(0.2rem);
+            border-radius: 9999px;
+        }
     }
 }
 
@@ -37,8 +51,8 @@
     align-items: center;
 
     & > span {
-        font-size: 1rem;
-        font-weight: 700;
+        font-size: 0.35em;
+        font-weight: 800;
         letter-spacing: -0.0644rem;
         white-space: nowrap;
         position: relative;
@@ -56,112 +70,88 @@
             background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            font-weight: 800;
-            font-size: 1.1rem;
+            font-weight: 900;
+            font-size: 0.35em;
             white-space: nowrap;
         }
     }
 }
 
-.mobile-portrait {
-    &.v1 {
-        .chip {
-            &.selected-chip {
-                animation-name: selected-chip-animation-2;
-                animation-duration: 0.75s;
-            }
+// .mobile-portrait {
+//     &.v1 {
+//         .chip {
+//             &.selected-chip {
+//                 animation-name: selected-chip-animation;
+//                 animation-duration: 0.75s;
+//             }
 
-            &.unselected-chip {
-                animation-name: unselected-chip-animation-2;
-                animation-duration: 0.75s;
-            }
-        }
-    }
+//             &.unselected-chip {
+//                 animation-name: unselected-chip-animation;
+//                 animation-duration: 0.75s;
+//             }
+//         }
+//     }
 
-    &.v2 {
-        .chip {
-            &.selected-chip {
-                animation-name: selected-chip-animation;
-                animation-duration: 0.75s;
-            }
+//     &.v2 {
+//         .chip {
+//             &.selected-chip {
+//                 animation-name: selected-chip-animation;
+//                 animation-duration: 0.75s;
+//             }
 
-            &.unselected-chip {
-                animation-name: unselected-chip-animation;
-                animation-duration: 0.75s;
-            }
-        }
-    }
-}
+//             &.unselected-chip {
+//                 animation-name: unselected-chip-animation;
+//                 animation-duration: 0.75s;
+//             }
+//         }
+//     }
+// }
 
-.desktop,
-.mobile-landscape {
-    &.v1 {
-        .chip {
-            &.selected-chip {
-                animation-name: selected-chip-animation;
-                animation-duration: 0.75s;
-            }
+// .desktop,
+// .mobile-landscape {
+//     &.v1 {
+//         .chip {
+//             &.selected-chip {
+//                 animation-name: selected-chip-animation;
+//                 animation-duration: 0.75s;
+//             }
 
-            &.unselected-chip {
-                animation-name: unselected-chip-animation;
-                animation-duration: 0.75s;
-            }
-        }
-    }
+//             &.unselected-chip {
+//                 animation-name: unselected-chip-animation;
+//                 animation-duration: 0.75s;
+//             }
+//         }
+//     }
 
-    &.v2 {
-        .chip {
-            &.selected-chip {
-                animation-name: selected-chip-animation-2;
-                animation-duration: 0.75s;
-            }
+//     &.v2 {
+//         .chip {
+//             &.selected-chip {
+//                 animation-name: selected-chip-animation;
+//                 animation-duration: 0.75s;
+//             }
 
-            &.unselected-chip {
-                animation-name: unselected-chip-animation-2;
-                animation-duration: 0.75s;
-            }
-        }
-    }
-}
+//             &.unselected-chip {
+//                 animation-name: unselected-chip-animation;
+//                 animation-duration: 0.75s;
+//             }
+//         }
+//     }
+// }
 
-@keyframes selected-chip-animation {
-    0% {
-        transform: translateX(0) scale(1) rotateY(-180deg);
-    }
-    75% {
-        transform: translateX(-0.75rem) scale(1.1) rotateY(0);
-    }
-    100% {
-        transform: translateX(-0.5rem) scale(1.1) rotateY(0);
-    }
-}
+// @keyframes selected-chip-animation {
+//     0% {
+//         transform: scale(1);
+//     }
+//     100% {
+//         transform: scale(1.1);
+//     }
+// }
 
-@keyframes selected-chip-animation-2 {
-    0% {
-        transform: translateY(0) scale(1) rotateY(-180deg);
-    }
-    75% {
-        transform: translateY(-0.75rem) scale(1.1) rotateY(0);
-    }
-    100% {
-        transform: translateY(-0.5rem) scale(1.1) rotateY(0);
-    }
-}
-
-@keyframes unselected-chip-animation {
-    0% {
-        transform: translateX(-0.5rem) scale(1.1);
-    }
-    100% {
-        transform: translateX(0) scale(1);
-    }
-}
-
-@keyframes unselected-chip-animation-2 {
-    0% {
-        transform: translateY(-0.5rem) scale(1.1);
-    }
-    100% {
-        transform: translateY(0) scale(1);
-    }
-}
+// @keyframes unselected-chip-animation {
+//     0% {
+//         transform: scale(1.1);
+//     }
+//     100% {
+//         transform: scale(1);
+//     }
+// }
