--- a/src/common/components/ChipDeck/_v2.scss
+++ b/src/common/components/ChipDeck/_v2.scss
@@ -2,14 +2,12 @@
     &.v2 {
         &.chip-deck {
             // background-color: red;
-            --gap: 0.6rem;
-            --offset: 0.6rem;
-            --offset-height-active: 2rem;
+            --gap: 0.75rem;
+            --offset: 0.75rem;
 
             position: relative;
 
-            .wrapper,
-            .wrapperActive {
+            .wrapper {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -24,42 +22,11 @@
 
                 overflow: auto;
 
-                height: calc((2.8rem * 5) + (var(--gap) * 4) + (var(--offset) * 2) + 0.1rem);
+                height: calc((2.2rem * 5) + (var(--gap) * 4) + (var(--offset) * 2) + 0.1rem);
 
                 border-radius: 3.4rem;
                 background: rgba(0, 0, 0, 0.32);
                 backdrop-filter: blur(0.6rem);
-            }
-
-            .overflow {
-                pointer-events: none;
-
-                overflow: auto;
-                position: absolute;
-                height: calc((2.8rem * 5) + (var(--gap) * 4) + (var(--offset) * 2) + 0.1rem);
-                overflow: hidden;
-                width: calc(3.4rem + (var(--offset-height-active) * 2));
-
-                // background-color: red;
-                // opacity: 0.5;
-
-                top: 0;
-                left: calc(var(--offset-height-active) * -1);
-                border-radius: 3.5rem;
-            }
-
-            .wrapperActive {
-                overflow: visible;
-                width: 3.4rem;
-
-                border-color: transparent;
-
-                // background-color: blue;
-                // opacity: 0.5;
-
-                position: absolute;
-                right: var(--offset-height-active);
-                top: 0;
             }
         }
     }
@@ -70,14 +37,12 @@
     &.v2 {
         &.chip-deck {
             // background-color: red;
-            --gap: 0.6rem;
-            --offset: 0.6rem;
-            --offset-height-active: 2rem;
+            --gap: 0.75rem;
+            --offset: 0.75rem;
 
             position: relative;
 
-            .wrapper,
-            .wrapperActive {
+            .wrapper {
                 display: flex;
                 align-items: center;
                 gap: var(--gap);
@@ -91,39 +56,11 @@
 
                 overflow: auto;
 
-                width: calc((2.8rem * 5) + (var(--gap) * 4) + (var(--offset) * 2) + 0.1rem);
+                width: calc((2.2rem * 5) + (var(--gap) * 4) + (var(--offset) * 2) + 0.1rem);
 
                 border-radius: 3.4rem;
                 background: rgba(0, 0, 0, 0.32);
                 backdrop-filter: blur(0.6rem);
-            }
-
-            .overflow {
-                pointer-events: none;
-
-                overflow: auto;
-                position: absolute;
-                width: calc((2.8rem * 5) + (var(--gap) * 4) + (var(--offset) * 2) + 0.1rem);
-                overflow: hidden;
-                height: calc(3.4rem + (var(--offset-height-active) * 2));
-
-                // background-color: red;
-                // opacity: 0.5;
-
-                left: 0;
-                top: calc(var(--offset-height-active) * -1);
-                border-radius: 3.5rem;
-            }
-
-            .wrapperActive {
-                overflow: visible;
-                height: 3.4rem;
-
-                border-color: transparent;
-
-                position: absolute;
-                bottom: var(--offset-height-active);
-                left: 0;
             }
         }
     }
