--- a/src/common/components/ButtonAction/styles.module.scss
+++ b/src/common/components/ButtonAction/styles.module.scss
@@ -7,18 +7,14 @@
     display: flex;
     flex-direction: column;
     gap: 0.4rem;
-    transition: all 0.2s linear;
+    transition: all 0.3s linear;
 
     align-items: center;
 
     width: 3.4rem;
 
     &.disapear {
-        animation: fadeout 0.45s forwards;
-    }
-
-    &.apear {
-        animation: fadein 0.45s forwards;
+        transition: all 0.3s linear;
     }
 }
 
@@ -65,6 +61,12 @@
 }
 
 .mobile-portrait {
+    &.button-action {
+        &.disapear {
+            --opacity: 0.2;
+        }
+    }
+
     .text {
         width: calc(100% + 0.8rem);
     }
@@ -72,27 +74,13 @@
 
 .desktop,
 .mobile-landscape {
+    &.button-action {
+        &.disapear {
+            --opacity: 0;
+        }
+    }
+
     .text {
         width: calc(100% + 1.2rem);
-    }
-}
-
-@keyframes fadein {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: var(--opacity, 1);
-    }
-}
-
-@keyframes fadeout {
-    from {
-        opacity: var(--opacity, 1);
-    }
-
-    to {
-        opacity: 0;
     }
 }
