--- a/src/common/components/GameUI/styles.module.scss
+++ b/src/common/components/GameUI/styles.module.scss
@@ -1,23 +1,23 @@
-.game-ui {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+// .game-ui {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
 
-    display: flex;
-    flex-direction: column;
-    z-index: 3;
-}
+//     display: flex;
+//     flex-direction: column;
+//     z-index: 3;
+// }
 
-.main {
-    flex: 1;
-}
+// .main {
+//     flex: 1;
+// }
 
-.mobile-portrait {
-    &.game-ui {
-        &.offset-streaming {
-            padding-top: calc(var(--height-streaming) * 1px);
-        }
-    }
-}
+// .mobile-portrait {
+//     &.game-ui {
+//         &.offset-streaming {
+//             padding-top: calc(var(--height-streaming) * 1px);
+//         }
+//     }
+// }
