--- a/src/common/components/Streaming/styles.module.scss
+++ b/src/common/components/Streaming/styles.module.scss
@@ -1,9 +1,9 @@
 .streaming {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: -0.1rem;
+    left: -0.1rem;
+    width: calc(100% + 0.2rem);
+    height: calc(100% + 0.2rem);
 }
 
 .video-container {
@@ -49,14 +49,22 @@
     }
 
     .video-background {
-        flex: 1;
-        width: 100%;
+        height: calc(100% + 0.2rem);
+        width: calc(100% + 0.5rem);
         background-image: var(--streaming-color-1);
+        transform: translateY(-0.2rem);
     }
 }
 
 .desktop,
 .mobile-landscape {
+    &.streaming {
+        top: 0;
+        left: 0;
+        width: var(--width-game-px);
+        height: var(--height-game-px);
+    }
+
     .video-container {
         position: absolute;
         left: 50%;
