--- a/src/common/components/Video/WebStream/styles.module.scss
+++ b/src/common/components/Video/WebStream/styles.module.scss
@@ -1,8 +1,8 @@
 .web-stream {
     width: 100%;
     height: 100%;
-    border: none;
-    outline: none;
+    border: 0;
+    outline: 0;
 }
 
 .loading-wrapper {
