--- a/src/game/components/TableBet/TableBetChip/styles.module.scss
+++ b/src/game/components/TableBet/TableBetChip/styles.module.scss
@@ -1,7 +1,8 @@
 .chip {
     --opacity: 1;
 
-    position: relative;
+    // Todo: moduleException
+    // position: relative;
     border-radius: 9999px;
     overflow: hidden;
     opacity: var(--opacity);
