--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -8,28 +8,27 @@
     --streaming-scale-portrait: 1.1;
 
     // portrait, streaming ke bawah
-    --streaming-color-1: linear-gradient(180deg, #854c07 0%, #533909 40.22%, #0e0901 100%);
+    --streaming-color-1: linear-gradient(180deg, #FF7401 0%, #452204 40.22%, #0B0500 100%);
     // portrait, blur di bawah streaming 1
     --streaming-color-2: linear-gradient(
         180deg,
-        rgba(133, 76, 7, 0) 0%,
-        rgba(133, 76, 7, 0.5) 100%
+        rgba(255, 116, 0, 0) 0%,
+        rgba(255, 116, 0, 0.5) 100%
     );
     // portrait, blur di bawah streaming 2
-    --streaming-color-3: linear-gradient(180deg, rgba(133, 76, 7, 0) 0%, #854c07 100%);
+    --streaming-color-3: linear-gradient(180deg, rgba(255, 116, 0, 0) 0%, #FF7401 100%);
 
     // landscape, bawah
-    --streaming-color-4: linear-gradient(to right, #1c1303 0%, #1c1303 28%, transparent 100%);
+    --streaming-color-4: linear-gradient(to right, rgba(14,11,8, 0.8) 0%, transparent 100%);
     // landscape, kiri
-    --streaming-color-5: linear-gradient(to left, #1c1303 0%, #1c1303 28%, transparent 100%);
+    --streaming-color-5: linear-gradient(to left, rgba(14,11,8, 0.8) 0%, transparent 100%);
     // landscape, kanan
     --streaming-color-6: linear-gradient(
             180deg,
-            rgba(28, 19, 3, 0) 0%,
-            rgba(28, 19, 3, 0.83) 47.34%,
-            #0d0800 100%
-        ),
-        linear-gradient(180deg, rgba(28, 19, 3, 0) 0%, rgba(28, 19, 3, 0.83) 47.34%, #0d0800 100%);
+            rgba(255, 116, 0, 0) 0%,
+            rgba(255, 116, 0, 1) 50%,
+            #4C2200 100%
+        );
 
     --bg-footer: transparent; // rgba(2, 10, 20, 0.5);
 
