--- a/src/game/components/MobilePortraitWild/table-bet-landscape.module.scss
+++ b/src/game/components/MobilePortraitWild/table-bet-landscape.module.scss
@@ -16,7 +16,7 @@ $childBetM23Width : calc(98.5%/2);
     display: flex;
     flex-direction: column;
     z-index: 1;
-
+    height: fit-content;
     &.open {
         transform: $transformOpen;
         animation: openTable;
