--- a/src/game/components/RoadMap/roadmap-portrait.module.scss
+++ b/src/game/components/RoadMap/roadmap-portrait.module.scss
@@ -1,3 +1,9 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    padding-inline: 0.5rem;
+}
+
 .scrolledYRoadmap {
     // max-height: 30vw;
     height: 9rem;
