--- a/src/game/components/MobilePortraitWild/table-bet-landscape.module.scss
+++ b/src/game/components/MobilePortraitWild/table-bet-landscape.module.scss
@@ -4,7 +4,7 @@ $maxY: -30%;
 // $domainHeight: 32vh;
 $domainHeight: 33vw;
 $transformOpen: translate(-50%, -40%) scale(0.45);
-$transformClose:  perspective(calc(800px * var(--scale-height))) rotateX(40deg) translateZ(0) scale(1);
+$transformClose: perspective(calc(800px * var(--scale-height))) rotateX(40deg) translateZ(0) scale(1);
 $transformCloseZoom: translate(-50%, calc(-50%)) scale(0.6);
 
 $childBetM23Width : calc(98.5%/2);
@@ -17,6 +17,7 @@ $childBetM23Width : calc(98.5%/2);
     flex-direction: column;
     z-index: 1;
     height: fit-content;
+
     &.open {
         transform: $transformOpen;
         animation: openTable;
@@ -191,6 +192,7 @@ $childBetM23Width : calc(98.5%/2);
     text-align: center;
     // margin-top: -4%;
     margin-top: -4.5%;
+    z-index: 2;
 }
 
 .domainContent {
@@ -328,7 +330,7 @@ $childBetM23Width : calc(98.5%/2);
 
         flex-direction: row-reverse;
 
-       
+
         &>span {
             &>div {
                 margin-left: 0.75rem;
@@ -348,6 +350,7 @@ $childBetM23Width : calc(98.5%/2);
     align-items: center;
     align-self: center;
     z-index: 1;
+
     &>span {
         padding-right: 1rem;
         text-transform: uppercase;
@@ -366,7 +369,7 @@ $childBetM23Width : calc(98.5%/2);
     height: 31.68%;
 }
 
-.cardContainerTiger{
+.cardContainerTiger {
     position: absolute;
     bottom: 9rem;
     left: auto;
@@ -495,5 +498,35 @@ $childBetM23Width : calc(98.5%/2);
 
     to {
         transform: $transformOpen;
+    }
+}
+
+.result-number-slide-right {
+    animation: slideRight 0.5s forwards;
+    // animation-delay: 2s;
+}
+
+@keyframes slideRight {
+    0% {
+        transform: translate(-50%, 0);
+    }
+
+    100% {
+        transform: translate(0%, 0);
+    }
+}
+
+.result-number-slide-left {
+    animation: slideLeft 0.5s forwards;
+    // animation-delay: 2s;
+}
+
+@keyframes slideLeft {
+    0% {
+        transform: translate(50%, 0);
+    }
+
+    100% {
+        transform: translate(0%, 0);
     }
 }
