--- a/src/common/components/ChipDeck/Chip/styles.module.scss
+++ b/src/common/components/ChipDeck/Chip/styles.module.scss
@@ -11,11 +11,11 @@
     height: var(--height-chip);
 
     transform: scale(1);
-    transition: transform 0.45s linear;
+    transition: transform 0.3s linear;
 
     &.active {
         transform: scale(1.2);
-        transition: transform 0.45s linear;
+        transition: transform 0.3s linear;
 
         &::before {
             content: '';
@@ -36,122 +36,10 @@
     }
 }
 
-.chip > svg,
-.content {
+.chip > svg {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 }
-
-.content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    & > span {
-        font-size: 0.35em;
-        font-weight: 800;
-        letter-spacing: -0.0644rem;
-        white-space: nowrap;
-        position: relative;
-        z-index: 1;
-
-        &::before {
-            content: attr(data-value);
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            z-index: -1;
-
-            background: linear-gradient(180deg, var(--color) 0%, var(--color) 100%);
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-weight: 900;
-            font-size: 0.35em;
-            white-space: nowrap;
-        }
-    }
-}
-
-// .mobile-portrait {
-//     &.v1 {
-//         .chip {
-//             &.selected-chip {
-//                 animation-name: selected-chip-animation;
-//                 animation-duration: 0.75s;
-//             }
-
-//             &.unselected-chip {
-//                 animation-name: unselected-chip-animation;
-//                 animation-duration: 0.75s;
-//             }
-//         }
-//     }
-
-//     &.v2 {
-//         .chip {
-//             &.selected-chip {
-//                 animation-name: selected-chip-animation;
-//                 animation-duration: 0.75s;
-//             }
-
-//             &.unselected-chip {
-//                 animation-name: unselected-chip-animation;
-//                 animation-duration: 0.75s;
-//             }
-//         }
-//     }
-// }
-
-// .desktop,
-// .mobile-landscape {
-//     &.v1 {
-//         .chip {
-//             &.selected-chip {
-//                 animation-name: selected-chip-animation;
-//                 animation-duration: 0.75s;
-//             }
-
-//             &.unselected-chip {
-//                 animation-name: unselected-chip-animation;
-//                 animation-duration: 0.75s;
-//             }
-//         }
-//     }
-
-//     &.v2 {
-//         .chip {
-//             &.selected-chip {
-//                 animation-name: selected-chip-animation;
-//                 animation-duration: 0.75s;
-//             }
-
-//             &.unselected-chip {
-//                 animation-name: unselected-chip-animation;
-//                 animation-duration: 0.75s;
-//             }
-//         }
-//     }
-// }
-
-// @keyframes selected-chip-animation {
-//     0% {
-//         transform: scale(1);
-//     }
-//     100% {
-//         transform: scale(1.1);
-//     }
-// }
-
-// @keyframes unselected-chip-animation {
-//     0% {
-//         transform: scale(1.1);
-//     }
-//     100% {
-//         transform: scale(1);
-//     }
-// }
