--- a/src/common/components/SVG/SVGChip/styles.module.scss
+++ b/src/common/components/SVG/SVGChip/styles.module.scss
@@ -1,26 +1,15 @@
-.text {
+.text,
+.stroke {
     font-family: 'Inter', sans-serif;
-    line-height: 1;
-    font-size: 13px;
+    fill: #fff;
+    text-align: center;
+
+    font-size: 12.5px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.stroke {
     font-weight: 800;
-    letter-spacing: -0.6px;
-    z-index: 1;
-
-    &::before {
-        content: attr(data-value);
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        z-index: -1;
-
-        background: linear-gradient(180deg, var(--color) 0%, var(--color) 100%);
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        font-weight: 800;
-        letter-spacing: -0.6px;
-        font-size: 1.1em;
-        white-space: nowrap;
-    }
 }
