--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -44,4 +44,12 @@
     --timer-landscape-left: 1.2rem;
     --timer-landscape-trans-x: 0;
     --timer-landscape-trans-y: 0;
+
+    // layer
+    --layer-streaming: 1;
+    --layer-timer: 2;
+    --layer-game: 3;
+    --layer-top-winner: 4;
+    --layer-alert: 5;
+    --layer-menu: 6;
 }
