--- a/src/common/components/AlertUI/styles.module.scss
+++ b/src/common/components/AlertUI/styles.module.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 4;
+    z-index: var(--layer-alert);
 
     pointer-events: none;
 }
