--- a/src/common/menus/Menu/styles.module.scss
+++ b/src/common/menus/Menu/styles.module.scss
@@ -6,7 +6,7 @@
     height: 100%;
     background-color: rgba(2, 16, 33, 0.75);
     backdrop-filter: blur(0.1rem);
-    z-index: 10;
+    z-index: var(--layer-menu);
 
     animation-duration: 0.35s;
     animation-fill-mode: forwards;
